<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Матричный калькулятор</string>
    <string name="title_theory">Теория</string>
    <string name="title_operations">Операции</string>
    <string name="title_SLE">СЛАУ</string>
    <string name="title_activity_main">Калькулятор матриц</string>
    <string name="made_by" translatable="false">made by \nkartollika &amp; brotherthunder</string>
    <string name="About" translatable="false">About</string>
    <string name="splash_title">Калькулятор\nматриц</string>

    <string name="app_id" translatable="false">ca-app-pub-9193176037122415~9633966613</string>
    <string name="ad_activity_main" translatable="false">ca-app-pub-9193176037122415/5469213094</string>
    <string name="ad_activity_result" translatable="false">ca-app-pub-9193176037122415/1668557125</string>
    <string name="reward_video_ad" translatable="false">ca-app-pub-9193176037122415/8950201250</string>
    <string name="remove_interstitial_reward_video" translatable="false">ca-app-pub-9193176037122415/3578934006</string>
    <string name="interstitial_ad" translatable="false">ca-app-pub-9193176037122415/3097332676</string>

    <string name="identity_matrix">Единичная</string>
    <string name="zero_matrix">Нулевая</string>
    <string name="count_of_rows">
        Строк: <xliff:g example="3" id="rows">%1$d</xliff:g>
    </string>

    <string name="count_of_columns">
        Столбцов: <xliff:g example="3" id="cols">%1$d</xliff:g>
    </string>

    <string name="save">Сохранить</string>
    <string name="choose_operation">Выберите операцию</string>
    <string name="equal">Решить</string>
    <string name="header_input_matrix">Создать новую матрицу</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="matrix_A" translatable="false">A</string>
    <string name="matrix_B" translatable="false">B</string>
    <string name="default_value">0</string>
    <string name="back">Назад</string>
    <string name="in_progress">В разработке</string>
    <string name="binaries">Бинарные</string>
    <string name="unaries">Унарные</string>

    <string name="previous">Предыдущий этап</string>
    <string name="next">Следующий этап</string>
    <string name="step_by_step">Пошаговое решение</string>
    <string name="settings">Настройки</string>
    <string name="rate">Оценить</string>
    <string name="gp_not_found">Google Play не был найден на устройстве</string>
    <string name="triangle_start">Приведем матрицу к верхнетреугольному виду</string>
    <string name="e_start">Приведем матрицу к единичному виду</string>
    <string name="gauss_start">Решим систему уравнений методом Гаусса</string>
    <string name="gauss">Решить методом Гаусса</string>
    <string name="inverse_result">Обратная матрица:</string>
    <string name="determinant_result">Определитель матрицы:</string>
    <string name="save_result">Сохранить итог..</string>
    <string name="to_slot_1">в матрицу A</string>
    <string name="to_slot_2">в матрицу B</string>
    <string name="save_to_slot_1_success">Матрица сохранена в слот А</string>
    <string name="save_to_slot_Fail">Матрица не существует\nСохранить не удалось</string>
    <string name="save_to_slot_2_success">Матрица сохранена в слот В</string>
    <string name="matrix_dnexist">Обратной матрицы не существует</string>
    <string name="nothing_to_solve">Нечего решать :с</string>
    <string name="setup_dims">Настроить размерности</string>
    <string name="dimensions">Размерности</string>

    <string name="confirm">Хорошо</string>
    <string name="choose_one">Выберите нужную операцию</string>

    <string name="input_const">Введите значение константы</string>
    <string name="input_pow">Введите степень</string>
    <string name="number_not_found">Ошибка! Число не введено или имеет неверный формат</string>

    <string name="hide_all_views">Долгое нажатие позволяет убрать все элементы из верхней половины экрана. Это удобно!</string>

    <string name="confirm_experimenta">Включение данной опции может заметно сказаться на работе
        вашего устройства при выполнении операций с матрицами\nВы уверены, что хотите включить опцию?
    </string>

    <string name="pow_start">Найдем матрицы, которые необходимо будет перемножить для получения
        результата методом разложения степени по основанию 2:\n
    </string>

    <string name="needed_step_pow">Необходимая промежуточная матрица: </string>
    <string name="step_pow">Промежуточная матрица: </string>
    <string name="pow_result">Перемножив все необходимые промежуточные матрицы, получим:</string>

    <string name="easter_egg">Вы нашли пасхалку с:</string>

    <string name="invalid_dim">Неверные размеры матрицы</string>
    <string name="invalid_value">Неверное выражение в ячейке
        <xliff:g example="1" id="row">%1$d</xliff:g> :
        <xliff:g example="1" id="col">%2$d</xliff:g>
    </string>

    <string name="hide_card">Спрятать настройки</string>
    <string name="show_card">Показать настройки</string>
    <string name="big_dims_inform">Чтобы создавать матрицы больших размеров, выберите опцию \'Экспериментальная версия\' в настройках</string>
    <string name="experimental">Экспериментальная версия</string>
    <string name="adver">Не удалось загрузить рекламный блок :с</string>
    <string name="inp_dimens">Введите размерность</string>

    <string name="multi">Умножим &lt;u>&lt;b><xliff:g example="1" id="line">%1$d</xliff:g>&lt;/b>&lt;/u>
        строку на &lt;u>&lt;b><xliff:g example="1/3" id="coef">%2$s</xliff:g>&lt;/b>&lt;/u>
    </string>

    <string name="diff">Вычтем из строки &lt;u>&lt;b><xliff:g example="1" id="line1">%1$d</xliff:g>&lt;/b>&lt;/u> строку
        &lt;b>&lt;u><xliff:g example="2" id="line2">%2$d</xliff:g>&lt;/b>&lt;/u>, умноженную на
        &lt;u>&lt;b><xliff:g example="1.0" id="coef">%3$s</xliff:g>&lt;/b>&lt;/u>
    </string>

    <string name="swap">Переставим &lt;u>&lt;b><xliff:g example="1" id="line1">%1$d</xliff:g>&lt;/b>&lt;/u> строку
        со строкой &lt;u>&lt;b><xliff:g example="2" id="line2">%2$d</xliff:g>&lt;/b>&lt;/u>
    </string>

    <string name="rows">Строк: <xliff:g example="1" id="rows">%1$d</xliff:g></string>

    <string name="columns">Столбцов: <xliff:g example="1" id="columns">%1$d</xliff:g></string>

    <string name="hasSolves">Система имеет решение:</string>

    <string name="noSolves">Система не имеет решений, так как существует противоречие в
        <xliff:g example="1" id="x">%1$d</xliff:g> строке\n( 0 != <xliff:g example="0" id="c">%2$s</xliff:g>)
    </string>

    <string name="even">x<sub><xliff:g example="1" id="num">%1$d</xliff:g></sub> - любое</string>
    <string name="scroll_to_see_more">прокрути вниз, чтобы увидеть больше</string>
    <string name="mult_diag">Перемножим элементы, стоящие на главной диагонали и умножим на (-1)</string>
    <string name="trans_sign">знак перестановки</string>


    <string name="apprater_remind_later">Позже</string>
    <string name="apprater_title">Оценить</string>
    <string name="apprater_summary">Нравится приложение?
        Оцените его в магазине Google Play. Это не займет у вас и минуты,
        но вы тем самым внесете огромный вклад в дальнейшие проекты.
        Спасибо за поддержку!
    </string>
    <string name="about_app">О приложении</string>
    <string name="app_version">Версия приложения</string>
    <string name="apprater_not_show">Нет, спасибо</string>

    <string name="darkmode">Ночная тема</string>
    <string name="ondarkmode">Включить ночную тему</string>

    <string name="defrows">Размерность строк</string>
    <string name="defcols">Размерность столбцов</string>

    <string name="exp_enable">Открывает возможность задавать матрицы больших размеров</string>
    <string name="defrowssumm">Количество строк для матриц по умолчанию</string>
    <string name="defrowstitle">Количество строк по умолчанию</string>

    <string name="defcolstitle">Количество столбцов по умолчанию</string>
    <string name="defcolssumm">Количество столбцов матриц по умолчанию</string>

    <string name="app_settings">Настройки приложения</string>

    <string name="rate_in_gp">Оценить в Google Play</string>
    <string name="do_you_like_it">Нравится приложение? Пожалуйста, оцените его в магазине</string>

    <string name="update_available">Доступно обновление!</string>
    <string name="clickToUpdate">Нажмите, чтобы обновить приложение</string>
    <string name="version">версии</string>
    <string name="noUpdateAvailable">Новых обновлений нет</string>
    <string name="update_available_from_settings_part2">Нажмите на соответстующее уведомление на панели, чтобы обновить приложение</string>

    <string name="to_slot_system">в слот матрицы</string>
    <string name="save_to_slot_success">Матрица сохранена в слот системы</string>
    <string name="failed_watch_ad_connection_problem">Не получилось загрузить рекламу. Проверьте настройки соединения</string>

    <string name="watch">Посмотреть</string>
    <string name="permWarning">Дать разрешение</string>

    <!-- String since 1.4 -->
    <string name="remove_ads">Убрать рекламу</string>
    <string name="succ_blocked_interstitials">Вы отключили межстраничные объявления на <xliff:g example="1" id="time">%1$d</xliff:g> минут</string>
    <string name="succ_blocked_banners">Вы отключили баннеры на <xliff:g example="1" id="time">%1$d</xliff:g> минут</string>
    <string name="error_try_watch_ad_again">Все виды рекламы в данный момент скрыты</string>
    <string name="message_about_removing_ads">Посмотреть рекламный ролик, чтобы убрать:\nБаннеры - на <xliff:g example="1" id="time1">%1$d</xliff:g> минут\nМежстранничные объявления - на <xliff:g example="1" id="time2">%2$d</xliff:g> минут</string>
    <string name="banners">Баннеры</string>
    <string name="interstitials">Межстраничные</string>
    <string name="try_again_open_reward_video">Видео еще не загрузилось. Попробуйте снова!</string>

    <!-- String since 1.4.3 -->
    <string name="permission_granted">Разрешение получено</string>
    <string name="permission_not_granted">Разрешение не получено</string>
    <string name="permission_message_dialog">Приложение хочет запросить у вас разрешение на использование GPS системы. Это нужно для того, чтобы реклама лучше подбиралась для вас исходя из вашего текущего местоположения\nА также вы очень поддержите разработчика в развитии его будущих проектов :3</string>

    <!-- String since 1.5 -->
    <string name="conn_error">Ошибка подключения при попытке запросить обновления</string>

    <!-- String since 1.6 -->
    <string name="setting_title_allow_checking_update">Обновления</string>
    <string name="setting_allow_checking_update">Проверять наличие новых обновлений при запуске</string>
    <string name="setting_title_check_updates_manually">Обновить</string>
    <string name="setting_check_updates_manually">Проверить на наличие обновлений</string>

    <!-- String since 1.6.1 -->
    <string name="block_ads_title">Выберите нужную опцию, чтобы заблокировать рекламу:</string>
    <string name="email_item_title">Написать разработчику</string>
    <string name="email_subject">Матричный калькулятор (Отзыв)</string>
    <string name="email_text">Докладываю о..</string>
    <string name="setting_email_summary">Сообщить об ошибке или предложить идею</string>
    <string name="block_ads"><xliff:g example="1" id="type">%1$s</xliff:g> - заблокировать на <xliff:g example="1" id="time">%2$d</xliff:g> минут</string>
</resources>
