<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/rate"
        android:orderInCategory="101"
        android:title="@string/rate" />

    <item
        android:id="@+id/remove_ads"
        android:orderInCategory="102"
        android:title="@string/remove_ads"/>

    <item
        android:id="@+id/writeEmail"
        android:orderInCategory="103"
        android:title="@string/email_item_title"/>

</menu>